--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -127,31 +127,31 @@
     }
     
     .navbar-collapse {
-        border-top: 1px solid transparent; /* Add border to separate collapsed menu */
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); /* Add shadow effect */
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     }
 
     .navbar-collapse.collapse {
-        display: none !important; /* Hide collapsed menu by default */
+        display: none !important;
     }
 
     .navbar-collapse.collapse.in {
-        display: block !important; /* Show collapsed menu when active */
+        display: block !important;
     }
 
     .navbar-nav {
-        float: none; /* Remove the float */
+        float: none;
         margin-top: 7.5px;
     }
 
     .navbar-nav>li {
-        float: none; /* Remove the float */
-        margin-top: 0; /* Adjust margin */
+        float: none;
+        margin-top: 0;
     }
 
     .navbar-nav>li>a {
-        padding-top: 10px; /* Adjust padding */
-        padding-bottom: 10px; /* Adjust padding */
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
    .main .welcome {
@@ -161,61 +161,6 @@
         margin: 0 63px 0 18px;
     }
 }
-
-
- /* .navbar, .navbar-default {
-    background-color: #EADDD1;
-    margin: 0;
-    padding: 0;
-    height: 127px;
-    position: relative;
-    border: none;
-}
-
-.navbar-vector {
-    background-image: url('../assets/main-page/header-vector.svg');
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-}
-
-.container-fluid {
-    padding: 0;
-    height: 100%;
-}
-
-.navbar-top {
-    padding-top: 45px;
-    margin-right: 13px;
-    height: 100%;
-    display: flex;
-    gap: 50px;
-}
-
-.navbar-top > .nav__link {
-    letter-spacing: 1.5px;
-}
-
-.navbar-nav>li {
-    display: flex;
-}
-
-.navbar-default .navbar-nav>li>a {
-    color: #402913;
-    padding: 0;
-    font-family: 'LT-Wave-Medium', sans-serif;
-    font-size: 20px;
-    line-height: 28px;
-    font-weight: 500;
-    letter-spacing: -0.015em;
-}
-
-.container-fluid >.navbar-header {
-    display: flex;
-    align-items: center;
-    height: 100%;
-} */
 
 .logo {
     /* padding-right: 20px; */
